# test

./: .gitignore  .gitmodules  123123.py
compactunit/: main.cpp
lab1/: CMakeLists.txt  main.cpp
lab2/: CMakeLists.txt  main.cpp
lab4/: main.cpp
lab5/: double.cpp  main.cpp  triple.cpp
lab6/: main.cpp
lab7/: main.cpp
lab8/: main.cpp
labs_1/lab1/: CMakeLists.txt  main.cpp
labs_1/lab3/: CMakeLists.txt  main.cpp
labs_1/lab4/: CMakeLists.txt
labs_1/lab5/: double.cpp  item2.cpp  main.cpp  triple.cpp
labs_2/lab1/: main.cpp
labs_2/lab2/: car.cpp  car.h  main.cpp
labs_2/lab3/: CMakeLists.txt  car.cpp  car.h
labs_2/lab3/lib/: CMakeLists.txt  workshop.cpp  workshop.h
labs_2/lab3/main/: CMakeLists.txt  car.cpp  car.h  main.cpp
labs_2/lab3/src/: car.cpp  car.h  main.cpp
labs_2/lab4/: book.cpp  book.h  lab4.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
labs_2/lab5/: card.cpp  card.h  card.ui  form.ui  lab5.pro  lib.cpp  lib.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  rs.qrc
labs_2/lab6/decoder/: mainwindow.cpp  mainwindow.h  mainwindow.ui
labs_2/lab6/encoder/: mainwindow.cpp  mainwindow.h  mainwindow.ui  msvc_make.bat
labs_2/lab6/shared/: inc.h
labs_2/lab7/client/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
labs_2/lab7/server/: CMakeLists.txt  server.cpp
labs_2/lab7/shared/: inc.h
misc/mcinventory/: inventory.h  mainwindow.ui  mcinventory.pro  rc.qrc
misc/race/: main.cpp
misc/strings/: main.cpp
misc/whateverthisis/: main.cpp  mainwindow.ui  rs.qrc  whateverthisis.pro
race/: main.cpp
(+7 files in other folders)
